# waybar-openusage

./: LICENSE  README-zh.md  README.md  install.sh  pyproject.toml
examples/: style.css  waybar-config.jsonc
waybar_openusage/: __init__.py  config.py  formatter.py  http_api.py  main.py  plugin_base.py  popup.py
waybar_openusage/plugins/: __init__.py  amp.py  claude.py  codex.py  copilot.py  cursor.py  factory.py  gemini.py  jetbrains.py  kimi.py  minimax.py  opencode_go.py  windsurf.py  zai.py
